--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Landwind</title>
   <link href="./output.css" rel="stylesheet">
+   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body class="bg-white text-gray-900">
 
@@ -290,4 +291,5 @@
   </div>
 </footer>
 </body>
+
 </html>
